syntax = "proto3";

package proto;
option go_package = "benchmark-grpc-protobuf-vs-http-json/grpc-protobuf/proto";

service Api {
	rpc CreateUser(User) returns (Response) {}
}

message User {
	string id = 1;
	string email = 2;
	string name = 3;
	string password = 4;
	string other = 5;
	int64 field1 = 6;
	float field2 = 7;
	repeated string field3 = 8;
	repeated int64 field4 = 9;
	repeated float field5 = 10;
}

message Response {
	string message = 1;
	int64 code = 2;
	User user = 3;
}
